# AegisQuant-2.0-

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES_v1.0.0.md  pyproject.toml  requirements.txt  setup.cfg
.kiro/specs/titan-quant/: design.md  requirements.md  tasks.md
config/: risk_control.yaml  system_setting.yaml
config/i18n/: .gitkeep  en.json  zh_cn.json  zh_tw.json
core/: __init__.py  __main__.py  auth.py  exceptions.py  handlers.py  optimizer.py  report.py  server.py
core/data/: __init__.py  cleaner.py  importer.py  key_store.py  provider.py  provider_manager.py  repository.py  storage.py
core/data/providers/: __init__.py  mongodb_provider.py  mysql_provider.py  parquet_provider.py
core/engine/: __init__.py  adapter.py  event.py  event_bus.py  matching.py  replay.py  risk.py  snapshot.py  types.py
core/engine/adapters/: __init__.py  veighna_adapter.py
core/strategies/: __init__.py  manager.py  template.py
database/: .gitkeep  schema.sql
database/bars/: .gitkeep
database/cache/: .gitkeep
database/ticks/: .gitkeep
docs/audit/: 2024-05-20-eventbus-audit.md  2024-05-20-eventbus-fix-report.md  2026-01-05-task16-alert-system-audit.md  2026-01-05-task4-adapter-audit.md  2026-01-05-task4-optimization-report.md  2026-01-05-task5-matching-engine-audit.md  2026-01-05-task6-data-governance-audit.md  2026-01-05-technical-debt-resolution.md  2026-01-06-code-review-prompt.md  2026-01-06-full-stack-audit.md  README.md
docs/commits/: 2026-01-06-task28-frontend-init.md  2026-01-06-task29-frontend-layout.md  2026-01-06-task39-zustand-stores.md
docs/images/: .gitkeep
reports/: .gitkeep
strategies/: .gitkeep
tests/: __init__.py  conftest.py  test_alert_system.py  test_audit_logger.py  test_auth.py  test_backtest_determinism.py  test_data_governance.py  test_encryption.py  test_event_bus.py  test_exceptions.py  test_i18n.py  test_manual_trading.py  test_matching_engine.py  test_message_handlers.py  test_optimizer.py  test_replay_controller.py  test_report.py  test_repository.py  test_risk_controller.py  test_snapshot.py  test_strategy_manager.py  test_websocket_server.py
ui/: .eslintrc.json  .gitkeep  README.md  electron-builder.yml  jest.config.js  package.json  tsconfig.json  webpack.main.config.js  webpack.renderer.config.js
ui/src/: setupTests.ts
ui/src/main/: main.ts
ui/src/renderer/: App.tsx  index.html  index.tsx
ui/src/renderer/__tests__/: Login.test.tsx  layoutPersistence.test.ts
ui/src/renderer/components/: ConnectionStatus.tsx  LanguageSelector.css  LanguageSelector.tsx  LayoutToolbar.css  LayoutToolbar.tsx  MainLayout.css  MainLayout.tsx
ui/src/renderer/components/AlertPopup/: AlertContainer.tsx  AlertPopup.css  AlertToast.tsx  SyncAlertModal.tsx  index.tsx  types.ts
ui/src/renderer/components/ControlPanel/: ManualTrade.css  ManualTrade.tsx  PlaybackBar.css  PlaybackBar.tsx  index.ts
ui/src/renderer/components/DataCenter/: CleaningPreview.css  CleaningPreview.tsx  DataCenter.css  FileDropzone.css  FileDropzone.tsx  ProviderConfig.css  ProviderConfig.tsx  index.tsx  types.ts
ui/src/renderer/components/KLineChart/: DrawingTools.css  DrawingTools.tsx  IndicatorPanel.css  IndicatorPanel.tsx  KLineChart.css  KLineChartWithTools.tsx  TradeMarkers.css  TradeMarkers.tsx  exports.ts  index.tsx  types.ts  utils.ts
ui/src/renderer/components/Login/: Login.css  index.tsx
ui/src/renderer/hooks/: index.ts  useIntegration.ts
ui/src/renderer/i18n/: index.ts
ui/src/renderer/i18n/locales/: en.json  (+2 more)
ui/src/renderer/layouts/: WorkspaceLayout.css  WorkspaceLayout.tsx  index.ts
ui/src/renderer/services/: index.ts  integration.ts  websocket.ts
ui/src/renderer/stores/: alertStore.ts  authStore.ts  backtestStore.ts  connectionStore.ts  i18nStore.ts  index.ts  layoutStore.ts  strategyStore.ts
ui/src/renderer/styles/: App.css  global.css
ui/src/renderer/types/: layout.ts  websocket.ts
ui/src/renderer/utils/: index.ts  layoutPersistence.ts
utils/: __init__.py  audit.py  encrypt.py  i18n.py  notifier.py
(+26 files in other folders)
