[metadata]
name = titan-quant
version = attr: core.__version__
description = 工程级量化交易回测系统
long_description = file: README.md
long_description_content_type = text/markdown
author = Titan-Quant Team
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.10
install_requires =
    polars>=0.20.0
    pandas>=2.0.0
    pyarrow>=14.0.0
    numpy>=1.24.0
    optuna>=3.5.0
    sqlalchemy>=2.0.0
    cryptography>=41.0.0
    argon2-cffi>=23.1.0
    websockets>=12.0
    pyzmq>=25.0.0
    pyyaml>=6.0.0
    loguru>=0.7.0

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.1.0
    hypothesis>=6.92.0
    black>=23.0.0
    isort>=5.12.0
    mypy>=1.7.0
    ruff>=0.1.0

[options.packages.find]
include = core*, utils*
exclude = tests*, ui*

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*
addopts = -v --tb=short

[coverage:run]
source = core, utils
omit = tests/*, ui/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
